<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EasyTime</string>
    <string name="title_Connect_Activity">Création compte</string>
    <string name="title_add_Activity">Ajouter une tache</string>  
    
    <string name="creationcompte_textview1_mail">Mail</string>
    <string name="creationcompte_textview2_mdp">Mot de passe</string>
    <string name="creationcompte_textview3_mdp">Confirmation mot de passe</string>
    <string name="creationcompte_button1_Ok">Créer</string>
    <string name="main_button_connexion">Connexion</string>
    <string name="main_textview_mail">Mail</string>
    <string name="main_textview_mdp">Mot de passe</string>
    <string name="creationcompte_textview4_message">"La création d\'un compte sécurisé est nécessaire pour assurer la confidentialité des données." </string>
    <string name="main_textview1_message">"Au boulot !!!" </string>
    <string name="addtask_textviewreference">"Référence"</string>
    <string name="addtask_textviewdescription">"Description"</string>
    <string name="addtask_textviewdureemini">"Durée mini"</string>        
    <string name="addtask_buttonajouter">"Ajouter"</string>  
    <string name="menu_add">"Ajouter"</string>  
    <string name="menu_quitter">"Quitter"</string>  
</resources>
