<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewConsigne"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/creationcompte_textview4_message"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/dimmessage" />

    <TextView
        android:id="@+id/textViewReference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addtask_textviewreference" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" 
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addtask_textviewdescription" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" 
        android:ems="10" />

    <TextView
        android:id="@+id/textViewDureeMini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addtask_textviewdureemini" />
    <EditText
        android:id="@+id/editTextDureeMini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonAjouter"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addtask_buttonajouter" />

</LinearLayout>
