<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
 	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
    tools:context=".MainActivity" >
     
<ImageView
    android:id="@+id/acountcreation_title"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:contentDescription="@string/none"
    android:src="@drawable/android" />
 
<TextView android:layout_height="wrap_content" 
	android:layout_width="wrap_content"
	android:text="@string/main_textview_mail" 
	android:paddingTop="10dp"
	android:textColor="#000000" 
	android:layout_gravity="center_horizontal" />
 
<TextView
    android:id="@+id/acountcreationemail"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center" />
	 
<TextView android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:text="@string/main_textview_mdp" 
	android:textColor="#000000"
	android:paddingTop="10dp" 
	android:layout_gravity="center_horizontal" />
	
<EditText
    android:id="@+id/acountcreationpassword"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:inputType="textPassword"
    android:textSize="@android:dimen/app_icon_size" />
 
<Button android:layout_width="wrap_content" 
	android:id="@+id/acountcreation_connect"
	android:layout_height="wrap_content"
	android:text="@string/main_button_connexion" 
	android:layout_marginTop="20dp"
	android:layout_gravity="center"/>
 
</LinearLayout>