<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textViewConsigne"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="20dp"
            android:text="@string/creationcompte_textview4_message"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/dimmessage" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textViewReference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creationcompte_textview1_mail"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewReference"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creationcompte_textview2_mdp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewDescription"
            android:ems="10"
            android:inputType="textPassword"
            android:nextFocusUp="@id/editText1" >

         

        </EditText>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textViewDureeMini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creationcompte_textview3_mdp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewDureeMini"
            android:ems="10"
            android:inputType="textPassword"
            android:nextFocusDown="@id/editText1"
            android:nextFocusUp="@id/editText2" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonAjouter"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/creationcompte_button1_Ok" />

</LinearLayout>
